2008-04-19  Torsten Rahn  <rahn@kde.org>

    * lib/MarbleWidget.cpp:
    * lib/AbstractScanlineTextureMapper.h:
    * lib/MergedLayerDecorator{cpp,h}:
    * lib/TextureTile.h:
    * lib/TileLoader{cpp,h}:
    * lib/MarbleModel{cpp,h}:
    * lib/CMakeLists.txt:
    * lib/MergedLayerPainter{cpp,h}:

    - Renaming MergedLayerPainter -> MergedLayerDecorator

2008-04-19  Torsten Rahn  <rahn@kde.org>

    * src/lib/AbstractScanlineTextureMapper.{cpp,h}:
    * src/lib/MarbleWidget.{cpp,h}:
    * src/lib/SunLocator{cpp,h}::
    * src/lib/TileLoader.h:
    * src/lib/MarbleMap.{cpp,h}:
    * src/lib/TextureTile.{cpp,h}:
    * src/lib/TileLoader.{cpp,h}:
    * src/lib/MarbleModel.{cpp,h}:
    * src/lib/MergedLayerPainter.{cpp,h}:

    Patch by David Roberts:

    - Patch to move the Merged Layer Painter into the TextureMapper class.
    - Removes all those strange occurances of SunLocator, etc. from 
      TileLoader and TextureTile.
    - Makes it possible to switch clouds and Tile IDs on and off later on ...

2008-04-19  Torsten Rahn  <rahn@kde.org>

    * src/lib/MapThemeManager.{cpp,h}:
    * src/lib/MapTheme.h:
    * src/lib/geodata/scene/GeoSceneSection{cpp,h}::

    - Some initial work on MapThemeManager

2008-04-18  Patrick Spendrin  <ps_ml@gmx.de>

    * src/tilecreator/tccore.h
    * src/tilecreator/tccore{cpp,h}:
    
    - remove the unused destructor of the wrapper class
    
2008-04-18  Torsten Rahn  <rahn@kde.org>

    * src/lib/MarbleModel{cpp,h}::
    * src/lib/geodata/handlers/dgml/DGMLVectorTagHandler{cpp,h}::
    * src/lib/geodata/handlers/dgml/DGMLElementDictionary{cpp,h}:
    * src/lib/geodata/handlers/dgml/DGMLAttributeDictionary{cpp,h}:
    * src/lib/geodata/handlers/dgml/DGMLPenTagHandler.{cpp,h}:
    * src/lib/geodata/handlers/dgml/DGMLBrushTagHandler.{cpp,h}:
    * src/lib/geodata/CMakeLists.txt:
    * src/lib/geodata/scene/GeoSceneVector{cpp,h}:
    * src/lib/geodata/scene/GeoSceneLayer{cpp,h}:
    * data/maps/earth/srtm/srtm.dgm2:
